--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,16 @@
 :root {
-	background-color: #333333;
+	background-color: #45006d;
 	color: #e0e0e0;
 }
 
 #page {
 	padding: .2rem;
+	column-count: 3;
 }
 
-#header {
-    background-color: #584a5e;
-	padding: 2rem;
-	text-align: left;
-	border-radius: 15px 50px 30px;
+h1 {
+	text-align: center;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #content {
@@ -26,11 +25,6 @@
 	width: auto;
 }
 
-a:hover {
-	background-color: #584a5e;
-	text-decoration: underline;
-	color:aliceblue;
-}
 
 #parent {
 	display: inline-block;
@@ -53,6 +47,16 @@ a:hover {
 	color: #333333;
 	padding: 2px 6px 2px 6px;
 	display:inline-flex;
+}
+
+.nav a {
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 10px 12px;
+	font-size: 15px;
+	border: transparent;
 }
 
 .art {
